<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".controller.Login"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="419dp"
        android:layout_marginTop="48dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/easter" />

    <EditText
        android:id="@+id/tx_login_email"
        android:layout_width="373dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textColor="#7E7E7E"
        android:textColorHint="#7E7E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.084"
        style="@style/CustomEditTextHintStyle"/>

    <EditText
        android:id="@+id/tx_login_password"
        android:layout_width="373dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="#7E7E7E"
        android:textColorHint="#7E7E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_login_email"
        app:layout_constraintVertical_bias="0.118"
        style="@style/CustomEditTextHintStyle"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="373dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_login_password"
        app:layout_constraintVertical_bias="0.22" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="212dp"
        android:layout_height="19dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.27">

        <TextView
            android:id="@+id/textView"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Don't have an account?"
            android:textColor="#7E7E7E" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_register"
            android:textColor="#7E7E7E"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:textColor="#7E7E7E"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        android:textColor="#7E7E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>