<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Account"
    android:background="@drawable/prof">


    <TextView
        android:id="@+id/et_profile_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:gravity="center"
        android:hint="user_ID"
        android:padding="10dp"
        android:textColor="#7E7E7E"
        android:textColorHint="#808080"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/et_profile_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <Button
        android:id="@+id/btn_update_profile"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        android:background="@color/design_default_color_primary"
        android:elevation="2dp"
        android:text="@string/UpdateProfile"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_delete_profile"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/design_default_color_primary"
        android:elevation="2dp"
        android:text="@string/DeleteProfile"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_profile"
        app:layout_constraintVertical_bias="0.21"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/et_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:background="#00000000"
        android:gravity="center"
        android:hint="email"
        android:padding="10dp"
        android:textColor="#7E7E7E"
        android:textColorHint="#808080"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00000000"
        android:gravity="center"
        android:hint="**********"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#7E7E7E"
        android:textColorHint="#808080"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_profile_email" />


    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ResetPassword"
        android:textColor="#918C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete_profile" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share data"
        android:textColor="#918C8C"
        app:layout_constraintBottom_toTopOf="@+id/btn_update_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_passwd" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="@android:color/transparent"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/tasks"
            app:tint="@android:color/white"
            tools:layout_editor_absoluteY="674dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="@android:color/transparent"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/pie"
            app:tint="@android:color/white"
            tools:layout_editor_absoluteY="674dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="@android:color/transparent"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/chart"
            app:tint="@android:color/white"
            tools:layout_editor_absoluteY="674dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="@android:color/transparent"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/profile"
            app:tint="@android:color/white"
            tools:layout_editor_absoluteY="674dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>